[package]
name = "replicator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
futures-lite = "2.3.0"
hypercore = "0.12.1"
hypercore-protocol = "0.4.1"
random-access-storage = "5.0.0"
tracing = "0.1.40"
thiserror = "1.0.50"

[dev-dependencies]
async-std = "1.12.0"
piper = "0.2.1"
tokio = {version = "1.37.0", features = ["rt", "macros", "sync"] }
tracing-subscriber = "0.3.18"
