[package]
name = "replicator"
version = "0.1.0"
edition = "2021"

[features]
utils = ["dep:piper"]

[dependencies]
futures-lite = "2.3.0"
random-access-storage = "5.0.0"
tracing = "0.1.40"
thiserror = "1.0.50"
tokio = { version = "1.37.0", features = ["sync", "time"] }
async-channel = "1"
async-trait = "0.1.81"
piper = { version = "0.2.1", optional = true }
derive_builder = "0.20.0"

[dependencies.hypercore]
#path = "../core"
git = "https://github.com/cowlicks/hypercore.git"
rev = "38251fea433b188f23b404a4ebda069d489e2b21"

[dependencies.hypercore-protocol]
#path = "../../protocol"
git  = "https://github.com/cowlicks/hypercore-protocol-rs.git"
rev = "0eb6baf6dd09c1e50a4ec174250ef4022e4f3dbe"

[dev-dependencies]
async-process = "2.2.1"
piper = "0.2.1"
serde_json = "1.0.116"
tempfile = "3.10.1"
tokio = {version = "1.37.0", features = ["rt", "macros", "sync", "net"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utils = { path = "../utils" }
macros = { path = "../macros" }
random-access-memory = "3.0.0"
rusty_nodejs_repl = "0.2.1"
data-encoding = "2.6.0"
tokio-util = { version = "0.7.11", features = ["compat"] }
