[package]
name = "replicator"
version = "0.1.0"
edition = "2021"

[features]
utils = ["dep:piper"]

[dependencies]
futures-lite = "2.3.0"
random-access-storage = "5.0.0"
tracing = "0.1.40"
thiserror = "1.0.50"
# TODO FIXME dont use "full"
#tokio = { version = "1.37.0", features = ["sync", "time"] }
tokio = { version = "1.37.0", features = ["full"] }
async-channel = "1"
async-trait = "0.1.81"
piper = { version = "0.2.1", optional = true }
derive_builder = "0.20.0"

[dependencies.bitfield]
path = "../bitfield"

[dependencies.hypercore]
#path = "../../core"
git = "https://github.com/cowlicks/hypercore.git"
rev = "29f0a199861d06dee701413f473a43acbcfdff4f"

[dependencies.hypercore-protocol]
#path = "../../protocol"
git  = "https://github.com/cowlicks/hypercore-protocol-rs.git"
rev = "03d47cbfddda5107b20356b58324789bc8b2f7af"

[dev-dependencies]
async-process = "2.2.1"
piper = "0.2.1"
serde_json = "1.0.116"
tempfile = "3.10.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utils = { path = "../utils" }
macros = { path = "../macros" }
random-access-memory = "3.0.0"
rusty_nodejs_repl = "0.2.1"
data-encoding = "2.6.0"
tokio-util = { version = "0.7.11", features = ["compat"] }
