[package]
name = "replicator"
version = "0.1.0"
edition = "2021"

[features]
utils = ["dep:piper"]

[dependencies]
futures-lite = "2.3.0"
random-access-storage = "5.0.0"
tracing = "0.1.40"
thiserror = "1.0.50"
# TODO FIXME dont use "full"
#tokio = { version = "1.37.0", features = ["sync", "time"] }
tokio = { version = "1.37.0", features = ["full"] }
async-channel = "1"
async-trait = "0.1.81"
piper = { version = "0.2.1", optional = true }
derive_builder = "0.20.0"

[dependencies.bitfield]
path = "../bitfield"

[dependencies.hypercore]
features = ["sparse", "cache", "shared-core"]
version = "0.14.0"
#path = "../../core"

[dependencies.hypercore-protocol]
version = "0.6.1"
default-features = false
features = ["sparse", "cache", "tokio"]
#path = "../../protocol"

[dev-dependencies]
async-process = "2.2.1"
piper = "0.2.1"
serde_json = "1.0.116"
tempfile = "3.10.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utils = { path = "../utils" }
macros = { path = "../macros" }
random-access-memory = "3.0.0"
rusty_nodejs_repl = "0.2.1"
data-encoding = "2.6.0"
tokio-util = { version = "0.7.11", features = ["compat"] }
