[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
replicator = { path = "../replicator", features = ["utils"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-std = "1.12.0"
random-access-memory = "3.0.0"
tokio = { version = "1.37.0", features = ["sync"] }

[dependencies.hypercore]
path = "../../core"
#git = "https://github.com/cowlicks/hypercore.git"
#branch = "add-events"

[dependencies.hypercore-protocol]
path = "../../protocol"
#git  = "https://github.com/cowlicks/hypercore-protocol-rs.git"
#branch = "add-events"
